--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node api/server.js "
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "json-server": "^0.17.0"
   }
 }
